pinned tags sort feature bug fix: couldn't update the sort order
